--- a/tmpl/term-grouped.html
+++ b/tmpl/term-grouped.html
@@ -15,27 +15,36 @@
     <div class="term-expression">{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}</div>
     {{/if}}
 
+    {{#if reasons}}
     <div class="term-reasons">
         {{#each reasons}}
         <span class="reasons">{{.}}</span> {{#unless @last}}&laquo;{{/unless}}
         {{/each}}
     </div>
-
-    <div class="term-tags">
-        {{#each tags}}
-        <span class="tag tag-{{category}}" title="{{notes}}">{{name}}</span>
-        {{/each}}
-    </div>
+    {{/if}}
 
     <div class="term-glossary">
-        {{#if glossary.[1]}}
         <ol>
-            {{#each glossary}}
-            <li><span class="term-glossary-item">{{.}}</span></li>
+            {{#each definitions}}
+            <li>
+                {{#if tags}}
+                <div class="term-tags">
+                    {{#each tags}}
+                    <span class="tag tag-{{category}}" title="{{notes}}">{{name}}</span>
+                    {{/each}}
+                </div>
+                {{/if}}
+                {{#if glossary.[1]}}
+                <ul class="term-glossary-group">
+                    {{#each glossary}}
+                    <li><span class="term-glossary-item">{{.}}</span></li>
+                    {{/each}}
+                </ul>
+                {{else}}
+                <div class="term-glossary-group term-glossary-item">{{glossary.[0]}}</div>
+                {{/if}}
+            </li>
             {{/each}}
         </ol>
-        {{else}}
-        <p>{{glossary.[0]}}</p>
-        {{/if}}
     </div>
 </div>
