--- a/tmpl/term-grouped.html
+++ b/tmpl/term-grouped.html
@@ -26,24 +26,7 @@
     <div class="term-glossary">
         <ol>
             {{#each definitions}}
-            <li>
-                {{#if tags}}
-                <div class="term-tags">
-                    {{#each tags}}
-                    <span class="tag tag-{{category}}" title="{{notes}}">{{name}}</span>
-                    {{/each}}
-                </div>
-                {{/if}}
-                {{#if glossary.[1]}}
-                <ul class="term-glossary-group">
-                    {{#each glossary}}
-                    <li><span class="term-glossary-item">{{.}}</span></li>
-                    {{/each}}
-                </ul>
-                {{else}}
-                <div class="term-glossary-group term-glossary-item">{{glossary.[0]}}</div>
-                {{/if}}
-            </li>
+            <li>{{> term-definition.html}}</li>
             {{/each}}
         </ol>
     </div>
