--- a/tmpl/term-grouped.html
+++ b/tmpl/term-grouped.html
@@ -1,33 +1,37 @@
 <div class="term-definition">
     <div class="action-bar">
         {{#if addable}}
-        <a href="#" title="Add term as expression" class="action-add-note pending disabled" data-mode="term_kanji" data-index="{{@index}}"><img src="img/add_term_kanji.png"></a>
-        <a href="#" title="Add term as reading" class="action-add-note pending disabled" data-mode="term_kana" data-index="{{@index}}"><img src="img/add_term_kana.png"></a>
+            <a href="#" title="Add term as expression" class="action-add-note pending disabled" data-mode="term_kanji" data-index="{{@index}}"><img src="img/add_term_kanji.png"></a>
+            <a href="#" title="Add term as reading" class="action-add-note pending disabled" data-mode="term_kana" data-index="{{@index}}"><img src="img/add_term_kana.png"></a>
         {{/if}}
         {{#if playback}}
-        <a href="#" title="Play audio" class="action-play-audio" data-index="{{@index}}"><img src="img/play_audio.png"></a>
+            <a href="#" title="Play audio" class="action-play-audio" data-index="{{@index}}"><img src="img/play_audio.png"></a>
         {{/if}}
     </div>
 
     {{#if reading}}
-    <div class="term-expression"><ruby>{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}<rt>{{reading}}</rt></ruby></div>
+        <div class="term-expression"><ruby>{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}<rt>{{reading}}</rt></ruby></div>
     {{else}}
-    <div class="term-expression">{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}</div>
+        <div class="term-expression">{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}</div>
     {{/if}}
 
     {{#if reasons}}
-    <div class="term-reasons">
-        {{#each reasons}}
-        <span class="reasons">{{.}}</span> {{#unless @last}}&laquo;{{/unless}}
-        {{/each}}
-    </div>
+        <div class="term-reasons">
+            {{#each reasons}}
+                <span class="reasons">{{.}}</span> {{#unless @last}}&laquo;{{/unless}}
+            {{/each}}
+        </div>
     {{/if}}
 
     <div class="term-glossary">
+        {{#if definitions.[1]}}
         <ol>
             {{#each definitions}}
-            <li>{{> term-definition.html}}</li>
+                <li>{{> term-definition.html}}</li>
             {{/each}}
         </ol>
+        {{else}}
+            {{> term-definition.html definitions.[0]}}
+        {{/if}}
     </div>
 </div>
