--- a/tmpl/term-list.html
+++ b/tmpl/term-list.html
@@ -1,7 +1,70 @@
+{{#*inline "definition"}}
+    {{#if tags}}
+        <div class="term-tags">
+            {{#each tags}}
+                <span class="tag tag-{{category}}" title="{{notes}}">{{name}}</span>
+            {{/each}}
+        </div>
+    {{/if}}
+    {{#if glossary.[1]}}
+        <ul class="term-glossary-group">
+            {{#each glossary}}
+                <li><span class="term-glossary-item">{{.}}</span></li>
+            {{/each}}
+        </ul>
+    {{else}}
+        <div class="term-glossary-group term-glossary-item">{{glossary.[0]}}</div>
+    {{/if}}
+{{/inline}}
+
+{{#*inline "term"}}
+<div class="term-definition">
+    <div class="action-bar">
+        {{#if addable}}
+            <a href="#" title="Add term as expression" class="action-add-note pending disabled" data-mode="term_kanji" data-index="{{@index}}"><img src="img/add_term_kanji.png"></a>
+            <a href="#" title="Add term as reading" class="action-add-note pending disabled" data-mode="term_kana" data-index="{{@index}}"><img src="img/add_term_kana.png"></a>
+        {{/if}}
+        {{#if playback}}
+            <a href="#" title="Play audio" class="action-play-audio" data-index="{{@index}}"><img src="img/play_audio.png"></a>
+        {{/if}}
+    </div>
+
+    {{#if reading}}
+        <div class="term-expression"><ruby>{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}<rt>{{reading}}</rt></ruby></div>
+    {{else}}
+        <div class="term-expression">{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}</div>
+    {{/if}}
+
+    {{#if reasons}}
+        <div class="term-reasons">
+            {{#each reasons}}
+                <span class="reasons">{{.}}</span> {{#unless @last}}&laquo;{{/unless}}
+            {{/each}}
+        </div>
+    {{/if}}
+
+    <div class="term-glossary">
+    {{#if grouped}}
+        {{#if definitions.[1]}}
+        <ol>
+            {{#each definitions}}
+                <li>{{> definition}}</li>
+            {{/each}}
+        </ol>
+        {{else}}
+            {{> definition definitions.[0]}}
+        {{/if}}
+    {{else}}
+        {{> definition}}
+    {{/if}}
+    </div>
+</div>
+{{/inline}}
+
 {{#if definitions}}
     {{#each definitions}}
         {{#unless @first}}<hr>{{/unless}}
-        {{> term.html addable=../addable playback=../playback}}
+        {{> term grouped=../grouped addable=../addable playback=../playback}}
     {{/each}}
 {{else}}
     <p>No results found</p>
