--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -132,17 +132,13 @@
                     <a href="https://foosoft.net/projects/anki-connect/">AnkiConnect</a> plugin.
                 </p>
 
+                <div class="checkbox">
+                    <label><input type="checkbox" id="anki-enable"> Enable Anki integration</label>
+                </div>
+
                 <div class="alert alert-danger" id="anki-error">
                     <strong>Error:</strong>
                     <span></span>
-                </div>
-
-                <div class="form-group">
-                    <label for="anki-method">Connection method</label>
-                    <select class="form-control" id="anki-method">
-                        <option value="disabled">Disabled (no auto flashcard creation)</option>
-                        <option value="ankiconnect">AnkiConnect (requires the AnkiConnect plugin)</option>
-                    </select>
                 </div>
 
                 <div id="anki-general">
@@ -152,7 +148,7 @@
                     </div>
 
                     <div class="form-group options-advanced">
-                        <label for="sentence-extent">Sentence extent</label>
+                        <label for="sentence-extent">Sentence detection extent</label>
                         <input type="number" min="1" id="sentence-extent" class="form-control">
                     </div>
 
