fix options page

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -154,12 +154,12 @@
 
                     <div id="anki-format">
                         <ul class="nav nav-tabs">
-                            <li class="active"><a href="#term" data-toggle="tab">Terms</a></li>
+                            <li class="active"><a href="#terms" data-toggle="tab">Terms</a></li>
                             <li><a href="#kanji" data-toggle="tab">Kanji</a></li>
                         </ul>
 
                         <div class="tab-content">
-                            <div id="term" class="tab-pane fade in active">
+                            <div id="terms" class="tab-pane fade in active">
                                 <div class="row">
                                     <div class="form-group col-xs-6">
                                         <label for="anki-term-deck">Deck</label>
