--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -30,15 +30,15 @@
                 </div>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="enable-audio-playback"> Enable audio playback</label>
+                    <label><input type="checkbox" id="audio-playback-buttons"> Audio playback buttons</label>
                 </div>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="enable-soft-katakana-search"> Enable soft Katakana search</label>
+                    <label><input type="checkbox" id="soft-katakana-search"> Soft Katakana search</label>
                 </div>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="group-term-results"> Group term results</label>
+                    <label><input type="checkbox" id="group-terms-results"> Group term results</label>
                 </div>
 
                 <div class="checkbox">
@@ -143,13 +143,13 @@
 
                 <div id="anki-general">
                     <div class="form-group">
-                        <label for="anki-card-tags">Card tags (comma or space separated)</label>
-                        <input type="text" id="anki-card-tags" class="form-control">
+                        <label for="card-tags">Card tags (comma or space separated)</label>
+                        <input type="text" id="card-tags" class="form-control">
                     </div>
 
                     <div class="form-group options-advanced">
-                        <label for="sentence-extent">Sentence detection extent</label>
-                        <input type="number" min="1" id="sentence-extent" class="form-control">
+                        <label for="sentence-detection-extent">Sentence detection extent</label>
+                        <input type="number" min="1" id="sentence-detection-extent" class="form-control">
                     </div>
 
                     <div id="anki-format">
@@ -162,13 +162,13 @@
                             <div id="terms" class="tab-pane fade in active">
                                 <div class="row">
                                     <div class="form-group col-xs-6">
-                                        <label for="anki-term-deck">Deck</label>
-                                        <select class="form-control anki-deck" id="anki-term-deck"></select>
+                                        <label for="anki-terms-deck">Deck</label>
+                                        <select class="form-control anki-deck" id="anki-terms-deck"></select>
                                     </div>
 
                                     <div class="form-group col-xs-6">
-                                        <label for="anki-term-model">Model</label>
-                                        <select class="form-control anki-model" id="anki-term-model"></select>
+                                        <label for="anki-terms-model">Model</label>
+                                        <select class="form-control anki-model" id="anki-terms-model"></select>
                                     </div>
                                 </div>
 
