--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -17,6 +17,10 @@
         </div>
     </div>
 
+    <div class="form-group dict-group-controls">
+        <label for="dict-{{title}}">Priority</label>
+        <input type="number" value="{{priority}}" id="dict-{{title}}" class="form-control dict-priority">
+    </div>
     <div class="checkbox dict-group-controls {{#unless hasTerms}}disabled{{/unless}}">
         <label><input type="checkbox" class="dict-enable-terms" {{#unless hasTerms}}disabled{{/unless}} {{#if enableTerms}}checked{{/if}}> Enable term search</label>
     </div>
