--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -129,7 +129,7 @@
                 <p class="help-block">
                     Yomichan features automatic flashcard creation for <a href="http://ankisrs.net/">Anki</a>, a free application
                     designed to help you retain knowledge. This functionality requires prior installation of the
-                    <a href="https://foosoft.net/projects/anki-connect/">AnkiConnect</a> plugin.
+                    <a href="https://foosoft.net/projects/anki-connect/">AnkiConnect</a> plugin for Anki.
                 </p>
 
                 <div class="checkbox">
