--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -142,6 +142,10 @@
                 </div>
 
                 <div id="anki-general">
+                    <div class="checkbox">
+                        <label><input type="checkbox" id="generate-html-cards"> Generate HTML cards</label>
+                    </div>
+
                     <div class="form-group">
                         <label for="card-tags">Card tags (comma or space separated)</label>
                         <input type="text" id="card-tags" class="form-control">
