--- a/tmpl/fields.html
+++ b/tmpl/fields.html
@@ -33,7 +33,7 @@
 
 {{#*inline "glossary"}}
 <div style="text-align: left;">
-{{#if grouped}}
+{{#if group}}
     {{#if definitions.[1]}}
     <ol>
         {{#each definitions}}
