--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -8,7 +8,7 @@
         <style>
             #anki-spinner, #anki-general, #anki-error,
             #dict-spinner, #dict-error, #dict-warning, #dict-purge-progress, #dict-import-progress, .dict-delete-progress,
-            #options-advanced {
+            .options-advanced {
                 display: none;
             }
 
@@ -33,7 +33,7 @@
                     <label><input type="checkbox" id="audio-playback-buttons"> Audio playback buttons</label>
                 </div>
 
-                <div class="checkbox">
+                <div class="checkbox options-advanced">
                     <label><input type="checkbox" id="soft-katakana-search"> Soft Katakana search</label>
                 </div>
 
@@ -142,7 +142,7 @@
                 </div>
 
                 <div id="anki-general">
-                    <div class="checkbox">
+                    <div class="checkbox options-advanced">
                         <label><input type="checkbox" id="generate-html-cards"> Generate HTML cards</label>
                     </div>
 
