--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -20,7 +20,7 @@
     <div class="checkbox dict-group-controls">
         <label><input type="checkbox" class="dict-enabled" {{#if enabled}}checked{{/if}}> Enable search</label>
     </div>
-    <div class="form-group dict-group-controls">
+    <div class="form-group dict-group-controls options-advanced">
         <label for="dict-{{title}}">Result priority</label>
         <input type="number" value="{{priority}}" id="dict-{{title}}" class="form-control dict-priority">
     </div>
