store max number of results to display

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -33,16 +33,21 @@
                     <label><input type="checkbox" id="audio-playback-buttons"> Audio playback buttons</label>
                 </div>
 
+                <div class="checkbox">
+                    <label><input type="checkbox" id="group-terms-results"> Group term results</label>
+                </div>
+
                 <div class="checkbox options-advanced">
                     <label><input type="checkbox" id="soft-katakana-search"> Soft Katakana search</label>
                 </div>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="group-terms-results"> Group term results</label>
+                    <label><input type="checkbox" id="show-advanced-options"> Show advanced options</label>
                 </div>
 
-                <div class="checkbox">
-                    <label><input type="checkbox" id="show-advanced-options"> Show advanced options</label>
+                <div class="form-group options-advanced">
+                    <label for="max-displayed-results">Maximum displayed results</label>
+                    <input type="number" min="1" id="max-displayed-results" class="form-control">
                 </div>
             </div>
 
