adding gecko polyfill

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -232,6 +232,7 @@
         <script src="../lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
         <script src="../lib/handlebars.min.js"></script>
         <script src="js/templates.js"></script>
+        <script src="js/gecko.js"></script>
         <script src="js/options.js"></script>
         <script src="js/options-form.js"></script>
     </body>
