--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -4,6 +4,7 @@
     <script src="../lib/handlebars.min.js"></script>
     <script src="../lib/dexie.min.js"></script>
     <script src="../lib/wanakana.min.js"></script>
+    <script src="js/gecko.js"></script>
     <script src="js/ankiconnect.js"></script>
     <script src="js/ankinull.js"></script>
     <script src="js/templates.js"></script>
