--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -13,6 +13,7 @@
         <div class="content"></div>
 
         <script src="../lib/jquery-2.2.2.min.js"></script>
+        <script src="js/gecko.js"></script>
         <script src="js/util.js"></script>
         <script src="js/frame.js"></script>
     </body>
