tweaks for ankiconnect

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -161,6 +161,11 @@
                         <input type="number" min="1" id="sentence-detection-extent" class="form-control">
                     </div>
 
+                    <div class="form-group options-advanced">
+                        <label for="interface-server">Interface server</label>
+                        <input type="text" id="interface-server" class="form-control">
+                    </div>
+
                     <div id="anki-format">
                         <ul class="nav nav-tabs">
                             <li class="active"><a href="#terms" data-toggle="tab">Terms</a></li>
