handle content script and background script desync on version update

--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -10,7 +10,11 @@
             <img src="img/spinner.gif">
         </div>
 
-        <div class="content"></div>
+        <div id="content"></div>
+        <div id="orphan">
+            <h1>Yomichan Updated!</h1>
+            <p>The Yomichan extension has been updated to a new version! In order to continue viewing definitions on this page you must reload this tab or restart your browser.</p>
+        </div>
 
         <script src="../lib/jquery-3.1.1.min.js"></script>
         <script src="js/util.js"></script>
