--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -17,6 +17,7 @@
         </div>
 
         <script src="../lib/jquery-3.1.1.min.js"></script>
+        <script src="../lib/wanakana.min.js"></script>
         <script src="js/util.js"></script>
         <script src="js/frame.js"></script>
     </body>
