--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -26,7 +26,7 @@
                 <h3>General Options</h3>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="activate-on-startup"> Activate on startup</label>
+                    <label><input type="checkbox" id="enable-search"> Enable search</label>
                 </div>
 
                 <div class="checkbox">
