fix options versioning code, update usage guide

--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -23,11 +23,10 @@
                 </p>
 
                 <ol>
-                    <li>Left-click on the <img src="../img/icon16.png" alt> icon to enable or disable Yomichan for the current browser instance.</li>
-                    <li>Right-click on the <img src="../img/icon16.png" alt> icon and select <em>Options</em> to open the Yomichan options page.</li>
-                    <li>Import any dictionaries (bundled or custom) you wish to use for Kanji and term searches; none are imported by default.</li>
+                    <li>Click on the <img src="../img/icon16.png" alt> icon in the browser toolbar to open the Yomichan options page.</li>
+                    <li>Import the dictionaries (bundled or custom) you wish to use for term and Kanji searches.</li>
                     <li>Hold down <kbd>Shift</kbd> (or the middle mouse button) as you hover over text to see term definitions.</li>
-                    <li>Resize the definitions window by dragging the bottom-left corner inwards or outwards to make it smaller or larger.</li>
+                    <li>Click on the <img src="../fg/img/play_audio.png" alt> icon to hear the term pronounced by a native speaker (if audio is available).</li>
                     <li>Click on Kanji in the definition window to view additional information about that character.</li>
                 </ol>
             </div>
