add dictionary descriptions

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -115,9 +115,9 @@
                     <div class="input-group-btn">
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
-                            <li><a href="#" data-url="edict">JMdict</a></li>
-                            <li><a href="#" data-url="enamdict">JMnedict</a></li>
-                            <li><a href="#" data-url="kanjidic">KANJIDIC2</a></li>
+                            <li><a href="#" data-url="edict">JMdict <span class="text-muted">(terms)</span></a></li>
+                            <li><a href="#" data-url="enamdict">JMnedict <span class="text-muted">(names)</span></a></li>
+                            <li><a href="#" data-url="kanjidic">KANJIDIC2 <span class="text-muted">(characters)</span></a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#" data-url="http://localhost:9876/index.json">Local dictionary</a></li>
                         </ul>
