updating homepage links

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -233,7 +233,7 @@
             </div>
 
             <div class="pull-right">
-                <small><a href="https://foosoft.net/projects/yomichan-chrome">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
+                <small><a href="https://foosoft.net/projects/yomichan/">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
             </div>
         </div>
 
