--- a/ext/bg/popup.html
+++ b/ext/bg/popup.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Welcome to Yomichan!</title>
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-toggle/bootstrap-toggle.min.css">
@@ -23,12 +22,14 @@
         </p>
         <p>
             <div class="btn-group" style="white-space: nowrap">
-                <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-cog"></button>
-                <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-search"></button>
-                <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-question-sign"></button>
+                <button type="button" id="open-search" class="btn btn-default btn-xs glyphicon glyphicon-search"></button>
+                <button type="button" id="open-options" class="btn btn-default btn-xs glyphicon glyphicon-cog"></button>
+                <button type="button" id="open-help" class="btn btn-default btn-xs glyphicon glyphicon-question-sign"></button>
             </div>
         </p>
         <script src="../lib/jquery-3.1.1.min.js"></script>
         <script src="../lib/bootstrap-toggle/bootstrap-toggle.min.js"></script>
+        <script src="js/gecko.js"></script>
+        <script src="js/popup.js"></script>
     </body>
 </html>
